code25_all/swift/26044483.txt
target dependency
link binary with library
User Header Search Paths
briding-header
#import "MyLibraryHeader.h"

User Header Search Paths
    let test = MyLib();
    let secondTest = MyLib.classMethod1("some_arguments");

EXC_BAD_INSTRUCTION
secondTest
(lldb) po test
error: <EXPR>:1:1: error: use of unresolved identifier 'test'

(lldb) po secondTest
error: Error in auto-import:
failed to get module 'MyProject' from AST context:
/Users/siegele/Sources/MyProject_iOS/MyProject/Classes/MyProject-Bridging-Header.h:12:9: error: 'MyLibraryHeader.h' file not found
#import "MyLibraryHeader.h"
        ^
failed to import bridging header '/Users/siegele/Sources/MyProject_iOS/MyProject/Classes/MyProject-Bridging-Header.h'

